Fix music covers

--- a/src/style/music.css
+++ b/src/style/music.css
@@ -8,27 +8,22 @@
 }
 
 .cover{
-
-
-  margin-left: 70px;
-  margin-right: 70px;
-  /*margin-top: 50px;*/
   margin-bottom: 50px;
 }
 
 .cover>a {
-  height: 300px;
-  width: 250px;
   display: flex;
   justify-content: center;
 }
 
 .cover>a>img {
 
-width:250px;
-height: 250px;
-box-shadow: 1px 1px 12px black;
-margin-bottom:15px;
+  height: 100%;
+  width: 100%;
+  max-width:250px;
+  max-height: 250px;
+  box-shadow: 1px 1px 12px black;
+  margin-bottom: 25px;
 }
 
 .cover>p{
@@ -36,11 +31,11 @@ margin-bottom:15px;
     /*font-size:0.3em;*/
 }
 .music-content{
-display: flex;
-justify-content: center;
-flex-wrap: wrap;
-margin:auto;
-/*max-width:1080px;*/
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin:auto;
+  /*max-width:1080px;*/
 }
 
 .cover>a>img:hover {
@@ -48,27 +43,5 @@ margin:auto;
   -webkit-filter: brightness(70%);
   -moz-filter: brightness(70%);
   -o-filter: brightness(70%);
-  -ms-filter: brightness(70%);
   transition-duration: 0.2s;
-}
-
-
-@media screen and (max-width: 968px){
-  .cover>a>img{
-
-  width:200px;
-  height: 200px;
-}
-
-.cover{
-
-  height:250px;
-  width:200px;
-  margin-left: 70px;
-  margin-right: 70px;
-  /*margin-top: 50px;*/
-  margin-bottom: 10px;
-}
-
-
 }
